--- a/main/templates/main/booking_history.html
+++ b/main/templates/main/booking_history.html
@@ -16,7 +16,8 @@
                 class="p-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
             <option value="">Semua Status</option>
             <option value="CONFIRMED">Confirmed</option>
-            <option value="PENDING">Pending</option></select>
+            <option value="PENDING">Pending</option>
+            <option value="CANCELLED">Cancelled</option></select>
     </div>
     
     <div id="bookingListWrapper">
